<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="net.tjcooper.calculator.MainActivity" tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginTop="90dp"
                  android:layout_marginBottom="355dp"
                  android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
    >

        <Button android:id="@+id/BtnClear"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/clear" />

        <Button android:id="@+id/BtnDelete"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/delete" />

        <Button android:id="@+id/BtnSign"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/sign" />

        <Button android:id="@+id/BtnEquals"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/equals" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginBottom="270dp"
                  android:layout_marginTop="175dp"
                  android:layout_alignParentLeft="true" android:layout_alignParentStart="false"
                  android:id="@+id/linearLayout">

        <Button android:id="@+id/BtnSeven"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/seven" />

        <Button android:id="@+id/BtnEight"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/eight" />

        <Button android:id="@+id/BtnNine"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nine" />

        <Button android:id="@+id/BtnAdd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/add" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginBottom="190dp"
                  android:layout_marginTop="260dp"
                  android:layout_alignParentLeft="true" android:layout_alignParentStart="false"
    >

        <Button android:id="@+id/BtnFour"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/four" />

        <Button android:id="@+id/BtnFive"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/five" />

        <Button android:id="@+id/BtnSix"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/six" />

        <Button android:id="@+id/BtnSubtract"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/subtract" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginBottom="110dp"
                  android:layout_marginTop="340dp"
                  android:layout_alignParentLeft="true" android:layout_alignParentStart="false"
    >

        <Button android:id="@+id/BtnOne"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/one" />

        <Button android:id="@+id/BtnTwo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/two" />

        <Button android:id="@+id/BtnThree"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/three" />

        <Button android:id="@+id/BtnMultiply"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/multiply" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginBottom="40dp"
                  android:layout_marginTop="420dp"
                  android:layout_alignParentLeft="true" android:layout_alignParentStart="false"
    >

        <Button android:id="@+id/BtnZero"
                android:layout_width="176dp"
                android:layout_height="fill_parent"
                android:text="@string/zero" />

        <Button android:id="@+id/BtnPeriod"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/period" />

        <Button android:id="@+id/BtnDivide"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/divide" />
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/linearLayout" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginBottom="180dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30pt"
                android:id="@+id/TextFormula" android:layout_gravity="center"/>
    </FrameLayout>
</RelativeLayout>
